--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,36 @@ repositories {
 }
 
 dependencies {
+    // web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    // lombok
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // devtool
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // DB
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // spring security
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+    // validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 
 }
